--- a/NewSiteShalom/package.json
+++ b/NewSiteShalom/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "jquey": "0.0.1-security",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
